# C-Playground

./: .gitignore  CMakeLists.txt  Makefile  README.md  execute_em.c  run_play_test.c  test  test_run
Collections/Heap/: HeapInt.c  HeapInt.h  Heap_Template.h
Collections/Linkedlist/: Linkedlist.c  Linkedlist.h
Collections/Sring/: string.c  string.h
Collections/Vector/: Vector.c  Vector.h  VectorFloat.c  VectorFloat.h  VectorInt.c  VectorInt.h  VectorString.c  VectorString.h  Vector_Template.h  test  vector.h
Tests/: dummy.c  main.c  test  threaded_vector.c
Tests/.ignored_folder/: ignored_file.c
Tests/Heap/: Init.c
Tests/Linkedlist/: LL_PushPop.c
Tests/Linkedlist/List/: nested_file.c
Tests/Vector/: Iterate.c  PushPop.c  Push_Pop.c  all.c  blank.c  nani.c  operation_fail.c
test_bin/: array  expect_fail  testable_with_long_name
testlib/: README.md  essential.h  runtime.h
